[package]
name = "rust_dlt"
version = "0.1.0"
authors = ["Kevin Wilson <khwilson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.17"
rust_decimal_macros = "1.17"

[[bin]]
name = "dlt-check-hash-injectivity"
path = "src/rust/check-hash-injectivity.rs"